@@ -8,8 +8,10 @@ Change Log:
 2.8 - 10/15/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Added built in grid views!
-- Added ability to trash/delete test orders, adjusting stock counts
+- Added ability to trash/delete orders and adjusts stock counts accordingly
 - Fix bug with product list widget when ordering by price or sales
+- Add default product images
+- Other minor bug/notice fixes
 
 2.7 - 10/03/2012 - Aaron Edwards
 ----------------------------------------------------------------------
